--- a/firefox-extension/data/preferences.html
+++ b/firefox-extension/data/preferences.html
@@ -23,7 +23,9 @@
 			margin: 4px 0;
 		}
 		.submit {
-			margin-top: 20px;
+			margin-top: 5px;
+			margin-left: 10px;
+			display: inline-block;
 		}
 		.submit button {
 			padding: 5px 15px 6px;
