--- a/firefox-extension/data/preferences.html
+++ b/firefox-extension/data/preferences.html
@@ -21,6 +21,7 @@
 		}
 		.option {
 			margin: 4px 0;
+			margin-left: 6px;
 		}
 		.submit {
 			margin-top: 5px;
@@ -48,6 +49,7 @@
 	<p>By default, we hide all posts that are not directly from your firends or pages you follow.</p>
 	<div class="option"><input type="radio" name="display" value="hide" id="display_hide"> <label for="display_hide">Hide completely</label></div>
 	<div class="option"><input type="radio" name="display" value="fade" id="display_fade"> <label for="display_fade">Just fade</label></div>
+	<div class="option"><input type="radio" name="display" value="disable" id="disable"> <label for="disable">Disable</label></div>
 	<div class="submit"><button id="save">Save</button>
 	<div class="submit"><button id="save_reload">Save & reload</button><span id="status"></span></div>
 	<script src="preferences.js"></script>
