--- a/firefox-extension/data/preferences.html
+++ b/firefox-extension/data/preferences.html
@@ -47,8 +47,8 @@
 <body>
 	<h1>friends feed</h1>
 	<p>By default, we hide all posts that are not directly from your firends or pages you follow.</p>
-	<div class="option"><input type="radio" name="display" value="hide" id="display_hide"> <label for="display_hide">Hide completely</label></div>
-	<div class="option"><input type="radio" name="display" value="fade" id="display_fade"> <label for="display_fade">Just fade</label></div>
+	<div class="option"><input type="radio" name="display" value="hide" id="display_hide"> <label for="display_hide">Hiden mode</label></div>
+	<div class="option"><input type="radio" name="display" value="fade" id="display_fade"> <label for="display_fade">Faded mode</label></div>
 	<div class="option"><input type="radio" name="display" value="disable" id="disable"> <label for="disable">Disable</label></div>
 	<div class="submit"><button id="save">Save</button>
 	<div class="submit"><button id="save_reload">Save & reload</button><span id="status"></span></div>
